<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CoffeeActivity">
    <CheckBox
            android:text="@string/cream"
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:id="@+id/cream"
            app:layout_constraintEnd_toStartOf="@+id/syrup" android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="25dp" app:layout_constraintBottom_toTopOf="@+id/whippedcream"
            android:onClick="creamClicked"/>
    <CheckBox
            android:text="@string/milk"
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:id="@+id/milk"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
            app:layout_constraintEnd_toStartOf="@+id/cream" android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/caramel" app:layout_constraintHorizontal_bias="0.0"
            android:onClick="milkClicked"/>
    <CheckBox
            android:text="@string/syrup"
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:id="@+id/syrup"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/whippedcream" android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp" app:layout_constraintEnd_toEndOf="parent" android:onClick="syrupClicked"/>
    <CheckBox
            android:text="@string/caramel"
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:id="@+id/caramel"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/selectsize" app:layout_constraintEnd_toStartOf="@+id/whippedcream"
            android:layout_marginEnd="37dp" android:layout_marginRight="37dp"
            app:layout_constraintHorizontal_bias="0.75" android:onClick="caramelClicked"/>
    <CheckBox
            android:text="@string/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:id="@+id/whippedcream"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/selectsize"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"
            app:layout_constraintStart_toEndOf="@+id/caramel" android:onClick="whippedCreamClicked"/>
    <Spinner
            android:layout_width="310dp"
            android:layout_height="42dp" android:id="@+id/selectsize"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:layout_marginBottom="27dp"
            app:layout_constraintBottom_toTopOf="@+id/subtotal"/>
    <TextView
            android:layout_width="310dp"
            android:layout_height="42dp" android:id="@+id/subtotal"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:textSize="18sp" android:textColor="#000000"
            android:layout_marginBottom="33dp" app:layout_constraintBottom_toTopOf="@+id/orderDonutButton"
            android:hint="@string/subtotal"/>
    <Button
            android:text="@string/add_to_order"
            android:layout_width="310dp"
            android:layout_height="50dp" android:id="@+id/orderDonutButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" android:textSize="24sp"
            android:textIsSelectable="false" android:textAllCaps="false" android:shadowColor="#673AB7"
            android:textColor="#000000" android:textColorHighlight="#FF0303" android:textColorLink="#8BC34A"
            android:background="#00BCD4" android:onClick="placeOrder"/>
    <ImageView
            android:layout_width="307dp"
            android:layout_height="218dp" app:srcCompat="@drawable/image_20160615_14016_njqw65"
            android:id="@+id/coffeepageimage" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="55dp" android:layout_marginStart="55dp" android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toTopOf="@+id/cream" android:contentDescription="@string/picture_for_coffee_page"/>
</androidx.constraintlayout.widget.ConstraintLayout>