<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/store_orders"
            android:layout_width="130dp"
            android:layout_height="50dp" android:id="@+id/button4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="235dp" android:layout_marginStart="235dp" android:onClick="storeordersButton"
            android:layout_marginEnd="52dp" android:layout_marginRight="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton8"/>
    <Button
            android:text="@string/order_details"
            android:layout_width="130dp"
            android:layout_height="50dp" android:id="@+id/button3"
            android:onClick="orderdetailsButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="46dp" android:layout_marginStart="46dp"
            app:layout_constraintEnd_toStartOf="@+id/button4" android:layout_marginEnd="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageButton7"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/donut_shop"
            android:layout_width="197dp"
            android:layout_height="57dp" android:id="@+id/textView"
            android:textSize="36sp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="584dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="107dp" android:layout_marginStart="107dp" android:layout_marginEnd="107dp"
            android:layout_marginRight="107dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="90dp"/>
    <Button
            android:text="@string/order_donuts"
            android:layout_width="130dp"
            android:layout_height="50dp" android:id="@+id/button"
            android:layout_marginEnd="256dp" android:layout_marginRight="256dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="46dp" android:layout_marginStart="46dp"
            android:onClick="donutsButton"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5"/>
    <Button
            android:text="@string/order_coffee"
            android:layout_width="130dp"
            android:layout_height="50dp" android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="247dp" android:layout_marginStart="247dp" android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" app:layout_constraintEnd_toEndOf="parent" android:onClick="coffeeButton"
            app:layout_constraintHorizontal_bias="0.461" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6"/>
    <ImageButton
            android:layout_width="108dp"
            android:layout_height="149dp" app:srcCompat="@drawable/photo_1551024601_bec78aea704b"
            android:id="@+id/imageButton5"
            android:cropToPadding="false" android:adjustViewBounds="false" android:scaleType="centerCrop"
            android:layout_marginBottom="7dp" app:layout_constraintBottom_toTopOf="@+id/button"
            android:layout_marginEnd="248dp" android:layout_marginRight="248dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/donutimage"
            android:background="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="55dp" android:layout_marginStart="55dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"/>
    <ImageButton
            android:layout_width="155dp"
            android:layout_height="111dp" app:srcCompat="@drawable/image_20160615_14016_njqw65"
            android:id="@+id/imageButton6"
            android:scaleType="centerCrop"
            android:contentDescription="@string/coffeeimage"
            android:background="#FFFFFF"
            android:layout_marginLeft="67dp"
            android:layout_marginStart="67dp" app:layout_constraintStart_toEndOf="@+id/imageButton5"
            android:layout_marginEnd="35dp" android:layout_marginRight="35dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <ImageButton
            android:layout_width="110dp"
            android:layout_height="116dp" app:srcCompat="@drawable/mycartimage" android:id="@+id/imageButton7"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp"
            android:contentDescription="@string/todo" android:background="#FFFFFF"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/imageButton8"
            android:layout_marginEnd="20dp" android:layout_marginRight="20dp"/>
    <ImageButton
            android:layout_width="110dp"
            android:layout_height="116dp" app:srcCompat="@drawable/storeorders"
            android:id="@+id/imageButton8"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/storeordersimage"
            android:scaleType="centerCrop" android:tint="#000000" android:background="#FFFFFF"
            tools:srcCompat="@drawable/storeorders"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp"
            app:layout_constraintStart_toEndOf="@+id/imageButton7"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/button2"
    />
</androidx.constraintlayout.widget.ConstraintLayout>