<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrdersdetailActivity">
    <TextView
            android:layout_width="330dp"
            android:layout_height="41dp" android:id="@+id/orderSubtotal"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/orderSalesTax"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="350dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" android:layout_marginEnd="41dp" android:layout_marginRight="41dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp" android:textColor="#000000"/>
    <TextView
            android:text="@string/salestax"
            android:layout_width="330dp"
            android:layout_height="41dp" android:id="@+id/orderSalesTax"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/orderSubtotal" android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/orderTotal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp" android:textColor="#000000"/>
    <TextView
            android:text="@string/total"
            android:layout_width="330dp"
            android:layout_height="41dp" android:id="@+id/orderTotal"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/orderSalesTax"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" android:layout_marginEnd="41dp" android:layout_marginRight="41dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp" app:layout_constraintBottom_toTopOf="@+id/placeorderButton"
            android:textSize="18sp" android:textColor="#000000"/>
    <Button
            android:text="@string/place_order"
            android:layout_width="158dp"
            android:layout_height="41dp" android:id="@+id/placeorderButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="84dp"
            android:layout_marginEnd="41dp" android:layout_marginRight="41dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="14dp" android:layout_marginStart="14dp"
            app:layout_constraintStart_toEndOf="@+id/removeItemButton"/>
    <Button
            android:text="@string/remove_item"
            android:layout_width="158dp"
            android:layout_height="41dp" android:id="@+id/removeItemButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="84dp"
            app:layout_constraintEnd_toStartOf="@+id/placeorderButton" android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="328dp"
            android:layout_height="164dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="132dp" android:layout_marginBottom="54dp"
            app:layout_constraintBottom_toTopOf="@+id/orderSubtotal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/yourordersList"/>
    <TextView
            android:text="@string/your_order"
            android:layout_width="211dp"
            android:layout_height="39dp" android:id="@+id/orderdetailsTitle"
            android:textColor="#000000" android:textSize="30sp"
            android:gravity="center" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="80dp"
            android:layout_marginBottom="13dp" app:layout_constraintBottom_toTopOf="@+id/yourordersList"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp" android:layout_marginEnd="100dp" android:layout_marginRight="100dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>